--- a/FFmpegDemo/Base.lproj/Main.storyboard
+++ b/FFmpegDemo/Base.lproj/Main.storyboard
@@ -683,7 +683,7 @@
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController id="B8D-0N-5wS" customClass="WindowController" customModule="FFmpegDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="FFmpeg Demo" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="400"/>
@@ -699,6 +699,9 @@
                                 <toolbarItem implicitItemIdentifier="8C6D0F9B-F7EE-4642-A795-DD6408C3C66D" label="Source" paletteLabel="Executable" tag="-1" image="chevron.up" catalog="system" bordered="YES" id="sAB-Qo-ufJ">
                                     <size key="minSize" width="27" height="25"/>
                                     <size key="maxSize" width="27" height="25"/>
+                                    <connections>
+                                        <action selector="toggleSourceButtonAction:" target="B8D-0N-5wS" id="XLW-Rc-vTy"/>
+                                    </connections>
                                 </toolbarItem>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
@@ -711,6 +714,7 @@
                         </connections>
                     </window>
                     <connections>
+                        <outlet property="toggleSourceButton" destination="sAB-Qo-ufJ" id="WXS-iN-nIy"/>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
                     </connections>
                 </windowController>
@@ -726,9 +730,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="400"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HW5-G2-LAA">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="400"/>
+                                <clipView key="contentView" drawsBackground="NO" id="5Rc-uE-rjT">
+                                    <rect key="frame" x="0.0" y="0.0" width="480" height="400"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textView wantsLayer="YES" editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" selectionGranularity="word" spellingCorrection="YES" smartInsertDelete="YES" id="Ubs-t2-bHI">
+                                            <rect key="frame" x="0.0" y="0.0" width="464" height="340"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <size key="minSize" width="464" height="340"/>
+                                            <size key="maxSize" width="470" height="10000000"/>
+                                            <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                        </textView>
+                                    </subviews>
+                                </clipView>
+                                <edgeInsets key="contentInsets" left="10" right="6" top="10" bottom="50"/>
+                                <edgeInsets key="scrollerInsets" left="0.0" right="0.0" top="0.0" bottom="20"/>
+                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="5xD-gY-7JJ">
+                                    <rect key="frame" x="-100" y="-100" width="240" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="ZXp-eA-kEI">
+                                    <rect key="frame" x="458" y="10" width="16" height="320"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="sqg-il-WTo">
                                 <rect key="frame" x="0.0" y="266" width="480" height="134"/>
                                 <subviews>
+                                    <visualEffectView blendingMode="withinWindow" material="headerView" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="EkR-YW-Ap5">
+                                        <rect key="frame" x="0.0" y="0.0" width="480" height="134"/>
+                                    </visualEffectView>
                                     <box title="FFmpeg Executable" translatesAutoresizingMaskIntoConstraints="NO" id="2YN-xK-ucy">
                                         <rect key="frame" x="17" y="42" width="446" height="78"/>
                                         <view key="contentView" id="PHT-mP-fWu">
@@ -829,45 +864,21 @@
                                     <constraint firstItem="5CX-E6-6xs" firstAttribute="top" secondItem="2YN-xK-ucy" secondAttribute="bottom" constant="8" symbolic="YES" id="1wL-b0-osV"/>
                                     <constraint firstAttribute="trailing" secondItem="2YN-xK-ucy" secondAttribute="trailing" constant="20" symbolic="YES" id="DHZ-IG-Vde"/>
                                     <constraint firstAttribute="height" constant="134" id="I2w-MP-5eZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="EkR-YW-Ap5" secondAttribute="trailing" id="LAT-0k-7x3"/>
                                     <constraint firstAttribute="bottom" secondItem="5CX-E6-6xs" secondAttribute="bottom" constant="8" id="QPP-xL-okT"/>
+                                    <constraint firstItem="EkR-YW-Ap5" firstAttribute="leading" secondItem="sqg-il-WTo" secondAttribute="leading" id="Rsg-JG-vgn"/>
                                     <constraint firstItem="5CX-E6-6xs" firstAttribute="leading" secondItem="sqg-il-WTo" secondAttribute="leading" id="TB9-YV-ODp"/>
                                     <constraint firstAttribute="trailing" secondItem="5CX-E6-6xs" secondAttribute="trailing" id="cqY-1u-jfn"/>
                                     <constraint firstItem="2YN-xK-ucy" firstAttribute="top" secondItem="sqg-il-WTo" secondAttribute="top" constant="14" id="fOW-2u-vn1"/>
                                     <constraint firstItem="2YN-xK-ucy" firstAttribute="leading" secondItem="sqg-il-WTo" secondAttribute="leading" constant="20" symbolic="YES" id="itX-hs-XLf"/>
+                                    <constraint firstAttribute="bottom" secondItem="EkR-YW-Ap5" secondAttribute="bottom" id="ix3-ej-M15"/>
+                                    <constraint firstItem="EkR-YW-Ap5" firstAttribute="top" secondItem="sqg-il-WTo" secondAttribute="top" id="xh0-zH-DIu"/>
                                 </constraints>
                             </customView>
-                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HW5-G2-LAA">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="266"/>
-                                <clipView key="contentView" drawsBackground="NO" id="5Rc-uE-rjT">
-                                    <rect key="frame" x="0.0" y="0.0" width="480" height="266"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <textView wantsLayer="YES" editable="NO" importsGraphics="NO" richText="NO" verticallyResizable="YES" selectionGranularity="word" spellingCorrection="YES" smartInsertDelete="YES" id="Ubs-t2-bHI">
-                                            <rect key="frame" x="0.0" y="0.0" width="464" height="206"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="464" height="206"/>
-                                            <size key="maxSize" width="470" height="10000000"/>
-                                            <color key="insertionPointColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                        </textView>
-                                    </subviews>
-                                </clipView>
-                                <edgeInsets key="contentInsets" left="10" right="6" top="10" bottom="50"/>
-                                <edgeInsets key="scrollerInsets" left="0.0" right="0.0" top="0.0" bottom="20"/>
-                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="5xD-gY-7JJ">
-                                    <rect key="frame" x="-100" y="-100" width="240" height="16"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                                <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="ZXp-eA-kEI">
-                                    <rect key="frame" x="458" y="10" width="16" height="186"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="cq2-aX-a9d">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="50"/>
                                 <subviews>
-                                    <visualEffectView blendingMode="withinWindow" material="titlebar" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="tV8-hV-FcM">
+                                    <visualEffectView blendingMode="withinWindow" material="sidebar" state="active" translatesAutoresizingMaskIntoConstraints="NO" id="tV8-hV-FcM">
                                         <rect key="frame" x="0.0" y="0.0" width="480" height="50"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pIT-nK-DN8">
@@ -901,7 +912,7 @@
                                             </textField>
                                             <textField wantsLayer="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qe6-aa-iI5">
                                                 <rect key="frame" x="186" y="15" width="254" height="21"/>
-                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="-c:v libx265 output.mp4" drawsBackground="YES" id="8Ud-Ef-Noh">
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="-c:v libx265 -crf20 output.mp4" drawsBackground="YES" id="8Ud-Ef-Noh">
                                                     <font key="font" usesAppearanceFont="YES"/>
                                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -913,6 +924,9 @@
                                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                     <font key="font" metaFont="system"/>
                                                 </buttonCell>
+                                                <connections>
+                                                    <action selector="runShell:" target="XfG-lQ-9wD" id="HHp-Fh-Fl1"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -943,7 +957,7 @@
                             <constraint firstAttribute="trailing" secondItem="cq2-aX-a9d" secondAttribute="trailing" id="0ju-4T-UP0"/>
                             <constraint firstItem="sqg-il-WTo" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="6MJ-Lr-1Ig"/>
                             <constraint firstAttribute="trailing" secondItem="sqg-il-WTo" secondAttribute="trailing" id="I6x-NZ-b3T"/>
-                            <constraint firstItem="HW5-G2-LAA" firstAttribute="top" secondItem="sqg-il-WTo" secondAttribute="bottom" id="IZi-Yz-F4Q"/>
+                            <constraint firstItem="HW5-G2-LAA" firstAttribute="top" secondItem="sqg-il-WTo" secondAttribute="top" id="IZi-Yz-F4Q"/>
                             <constraint firstItem="HW5-G2-LAA" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="Jn4-Pn-FFc"/>
                             <constraint firstAttribute="trailing" secondItem="HW5-G2-LAA" secondAttribute="trailing" id="K6H-fw-7IA"/>
                             <constraint firstItem="cq2-aX-a9d" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="OoC-4z-9ZF"/>
@@ -958,6 +972,7 @@
                         <outlet property="consoleTextView" destination="Ubs-t2-bHI" id="uJa-YQ-lSl"/>
                         <outlet property="executablePathTextField" destination="WVF-21-b5n" id="xKW-Lt-heb"/>
                         <outlet property="inputFileTextField" destination="v7w-5s-2qR" id="Zub-eG-cNy"/>
+                        <outlet property="sourceViewHeightConstraint" destination="I2w-MP-5eZ" id="dID-qZ-yLT"/>
                         <outlet property="statusLogButton" destination="eHW-FZ-SWz" id="L5r-11-qQw"/>
                         <outlet property="verifyExecutableButton" destination="s3t-ea-Z1F" id="PzU-iI-KmZ"/>
                         <outlet property="verifyProgressIndicator" destination="X7C-Gz-QPH" id="nK9-TD-OQA"/>
